[gd_scene load_steps=9 format=3 uid="uid://ce22u68qyw5bs"]

[ext_resource type="Script" uid="uid://dmd4vyes7x5kj" path="res://scenes/menu/title_screen.gd" id="1_cbih2"]
[ext_resource type="LabelSettings" uid="uid://ckiqm8178ehbn" path="res://assets/ui/fonts/alphabet_font_bold.tres" id="4_1hsha"]
[ext_resource type="Texture2D" uid="uid://h78g2ub37g4" path="res://assets/ui/menu/title/newgrounds_logo_animated.png" id="4_oq80g"]
[ext_resource type="PackedScene" uid="uid://ci64dha75wctw" path="res://scenes/menu/gf_dance_title.tscn" id="5_7rd1m"]
[ext_resource type="FontFile" uid="uid://b5yr23f8bpbss" path="res://assets/ui/fonts/statusplz.ttf" id="5_lh61k"]
[ext_resource type="SpriteFrames" path="res://assets/ui/menu/title/logoBumpin.res" id="5_spmwh"]

[sub_resource type="Gradient" id="Gradient_cbih2"]
offsets = PackedFloat32Array(0.0083682, 1)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_200k4"]
gradient = SubResource("Gradient_cbih2")

[node name="title_screen" type="Node2D"]
script = ExtResource("1_cbih2")

[node name="background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_200k4")

[node name="cool_text" type="Label" parent="background"]
clip_contents = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 195.0
offset_bottom = -220.0
grow_horizontal = 2
grow_vertical = 2
label_settings = ExtResource("4_1hsha")
horizontal_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="newgrounds_sprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(640, 498)
scale = Vector2(0.5, 0.5)
texture = ExtResource("4_oq80g")
hframes = 2

[node name="title_sprites" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2

[node name="gf" parent="title_sprites" instance=ExtResource("5_7rd1m")]
position = Vector2(916, 364)
scale = Vector2(0.9, 0.9)

[node name="logo" type="AnimatedSprite2D" parent="title_sprites"]
position = Vector2(340, 264)
sprite_frames = ExtResource("5_spmwh")
animation = &"logo bumpin"

[node name="confirm_label" type="Label" parent="title_sprites"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -112.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 8
theme_override_fonts/font = ExtResource("5_lh61k")
theme_override_font_sizes/font_size = 64
text = "Press ENTER or SPACE to Begin"
horizontal_alignment = 1
vertical_alignment = 2

[node name="color_rect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1280.0
offset_bottom = 720.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true
